@@ -2,6 +2,8 @@ Revision history for perl distribution Convos
 
 2.01 Not Released
  - Fix indicating that user is offline in chat messages
+ - Fix being able to clear organization_name and organization_url in
+   updateSettings endpoint
  - Improved user experience on the Settings page
 
 2.00 2019-11-23T10:23:35+0900
